# EpidemicSimulator

./: .env  Cargo.toml  README.md  run_for_york.sh  useful.js  viking_run.job
census_geography/: Cargo.toml
census_geography/src/: citizen.rs  household.rs  lib.rs  output_area.rs
class_diagrams/v1.6/: datastructures.puml
config/diseases/: covid_19.json
config/interventions/: default.json
data/: census_tables.md  parse_code_lists.py
debug_dumps/: plot_schools.py
debug_dumps/pre_duplicate_removal/: log.txt
draw/: Cargo.toml
draw/src/: error.rs  image_export.rs  lib.rs  live_render.rs
load_census_data/: Cargo.toml
load_census_data/src/: lib.rs  nomis_download.rs  parse_table.rs  parsing_error.rs  polygon_lookup.rs  population_and_density_per_output_area.rs  table_144_enum_values.rs  voronoi_generator.rs
load_census_data/src/osm_parsing/: convert.rs  draw_vorinni.rs  draw_voronoi.rs  mod.rs  vorini_generator.rs
load_census_data/src/tables/: age_structure.rs  employment_densities.rs  mod.rs  occupation_count.rs  population_and_density_per_output_area.rs  resides_vs_workplace.rs  teachers_per_local_authority.rs
logs/: find_missing_areas.py  timing_stuff.py
osm_data/: Cargo.toml
osm_data/src/: convert.rs  draw_voronoi.rs  error.rs  lib.rs  polygon_lookup.rs  quadtree.rs  voronoi_generator.rs
reference_data/: reference_graphs.ipynb
reference_data/York/: cases.csv  vaccinations.csv
reference_data/YorkshireAndHumber/: cases.csv  vaccinations.csv
run/: Cargo.toml
run/benches/: bench.rs
run/src/: arguments.rs  execute_modes.rs  load_data.rs  main.rs  visualise.rs
sim/: Cargo.toml
sim/src/: config.rs  disease.rs  error.rs  interventions.rs  lib.rs  main.rs  simulator.rs  simulator_builder.rs  statistics.rs
sim/src/models/: building.rs  citizen.rs  mod.rs  output_area.rs  public_transport_route.rs
simulation_results/: summary.md  v1.0.1.csv  v1.1.0.csv  v1.2.csv
statistics_results/: statistics.ipynb
statistics_results/v1.3/: global_stats.json
statistics_results/v1.5/: global_stats.json
statistics_results/v1.6/: timings.json
statistics_results/v1.6/1946157112TYPE299/: exposures.json  global_stats.json  memory.json  timings.json
statistics_results/v1.6/viking/1946157112TYPE299/: exposures.json  global_stats.json  memory.json  timings.json
statistics_results/v1.6/viking/2013265923TYPE299/: exposures.json  global_stats.json  memory.json  timings.json
statistics_results/v1.6_copy/: exposures.json  timings.json
statistics_results/v1.7.1/1946157112TYPE299/: exposures.json  global_stats.json  memory.json  timings.json
statistics_results/viking/v1.2/1946157112TYPE299/1/: exposures.json  global_stats.json  memory.json  timings.json
statistics_results/viking/v1.2/2013265923TYPE299/1/: exposures.json  global_stats.json  memory.json  timings.json
statistics_results/york_stats_results/: statistics.ipynb
statistics_results/york_stats_results/v1.3/: exposures.json  memory.json  timings.json
statistics_results/york_stats_results/v1.5/: exposures.json  memory.json  timings.json
statistics_results/york_stats_results/v1.6/: exposures.json  global_stats.json  memory.json
statistics_results/york_stats_results/v1.6_copy/: global_stats.json  memory.json
trapezium_map/: Cargo.toml
trapezium_map/src/: lib.rs
visualisation/: Cargo.toml  graph_visualistion_notes.md
visualisation/python_stuff/: Vis.ipynb  output_area_animation.py  test.py
visualisation/src/: citizen_connections.rs  error.rs  image_export.rs  lib.rs  live_render.rs
workplace_analysis/: analysis.ipynb
