[workspace]

members = ["load_census_data", "sim", "run", "visualisation"]

resolver = "2"

[profile.dev]
opt-level = 2
debug = true
incremental = true
lto = "thin"
debug-assertions = false
codegen-units = 128
panic = "unwind"

[profile.bench]
debug = true

[patch.crates-io]
quadtree_rs = { git = "https://github.com/NoSuchThingAsRandom/quadtree/" }