[package]
name = "census_geography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
geo-types = "0.7.2"
shapefile = { version = "0.3.0", features = ["geo-types"] }
uuid = { version = "0.8", features = ["v4"] }
enum-map = "1.1.1"
log = "0.4"
load_census_data = { path = "../load_census_data" }
rand = "0.8.4"
serde_plain = "1.0"
serde = "1.0"