[package]
name = "load_census_data"
version = "0.1.0"
edition = "2018"
authors = ["Sam Ralph"]

[dependencies]
async-recursion = "0.3"
csv = "1.1.6"
enum-map = "1.1.1"
geo = "0.18.0"
geo-types = { version = "0.7.2", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.14"
lonlat_bng = "0.3.8"
num-traits = "0.2.14"
ndarray = "0.15.4"
osmpbf = "0.2.6"
ostn02_phf = "0.1.13"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
proj5 = "0.1.7"
plotters = "0.3.1"
quadtree_rs = "0.1.2"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_plain = "1.0.0"
strum = "0.23"
strum_macros = "0.23"
voronoi = "0.1.4"