[package]
name = "load_census_data"
version = "0.1.0"
edition = "2018"
authors = ["Sam Ralph"]

[dependencies]
async-recursion = "=0.3.2"
csv = "1.1.6"
enum-map = "1.1.1"
futures-core = "=0.3.17"
http = "=0.2.5"
geo = "0.18.0"
geo-types = { version = "0.7.2", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.14"
lonlat_bng = "0.3.8"
num = "0.4.0"
num-traits = "0.2.14"
ndarray = "0.15.4"
osmpbf = "0.2.6"
ostn02_phf = "0.1.13"
proc-macro2 = "=1.0.34"
proj5 = "0.1.7"
plotters = "0.3.1"
quadtree_rs = "0.1.2"
quote = "=1.0.10"
rand = "0.8.4"
rayon = "1.5.1"
reqwest = { version = "=0.11.7", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_plain = "1.0.0"
shapefile = { version = "0.3.0", features = ["geo-types"] }
strum = "0.23"
strum_macros = "0.23"
syn = "=1.0.82"
uuid = { version = "0.8", features = ["v4", "serde"] }
voronoice = { git = "https://github.com/NoSuchThingAsRandom/voronoice" }