[package]
name = "load_census_data"
version = "0.1.0"
edition = "2018"
authors = ["Sam Ralph"]

[dependencies]
async-recursion = "=0.3.2"
csv = "1.1.6"
enum-map = "1.1.1"
futures-core = "=0.3.17"
http = "=0.2.5"
lazy_static = "1.4.0"
log = "0.4"
rand = { version = "0.8", features = ["alloc"] }
reqwest = { version = "=0.11.7", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_plain = "1.0.0"
shapefile = { version = "0.3.0", features = ["geo-types"] }
strum = "0.23"
strum_macros = "0.23"
