[package]
name = "osm_data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"

geo = "=0.18.0"
geo-types = { version = "=0.7.2", features = ["serde"] }
itertools = "0.10"

log = "0.4"
ndarray = "0.15.4"
num-traits = "0.2.14"

osmpbf = "0.2.6"
plotters = "0.3.1"

rand = "0.8"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shapefile = { version = "0.3.0", features = ["geo-types"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
voronoice = { git = "https://github.com/NoSuchThingAsRandom/voronoice" }
