[package]
name = "run"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
load_census_data = { path = "../load_census_data" }
sim = { path = "../sim" }

anyhow = "1.0"
clap = "2.34.0"
dotenv = "0.15"
geo-types = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }