[package]
name = "run"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
cpuprofiler = "0.0.4"
[[bench]]
name = "bench"
harness = false

[dependencies]
load_census_data = { path = "../load_census_data" }
visualisation = { path = "../visualisation" }
sim = { path = "../sim" }

anyhow = "=1.0.51"
clap = "2.34.0"
dotenv = "0.15"
futures = "=0.3.17"
geo-types = "0.7.2"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }