[package]
name = "run"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
cpuprofiler = "0.0.4"
[[bench]]
name = "bench"
harness = false

[dependencies]
load_census_data = { path = "../load_census_data" }
osm_data = { path = "../osm_data" }
visualisation = { path = "../visualisation" }
sim = { path = "../sim" }

anyhow = "=1.0.51"
clap = "2.34.0"
dotenv = "0.15"
futures-io = "=0.3.17"
futures-sink = "=0.3.17"
futures-task = "=0.3.17"
geo-types = "0.7.2"
log = "0.4"
num_cpus = "1.13.0"
pretty_env_logger = "0.4"
rand = "0.8.4"
rayon = "0.9.0"
tokio = { version = "1", features = ["full"] }