[package]
name = "sim"
version = "0.1.0"
edition = "2021"
authors = ["Sam Ralph"]

[dependencies]
load_census_data = { path = "../load_census_data" }
draw = { path = "../draw" }

anyhow = "1.0"
csv = "1.1.6"
dotenv = "0.15"
enum-map = "1.1.1"
geo-types = "0.7.2"
log = "0.4"
rand = "0.8.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_plain = "1.0"
simple_logger = { version = "1.15.0", features = ["timestamps"] }
shapefile = { version = "0.3.0", features = ["geo-types"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

