[package]
name = "sim"
version = "0.1.0"
edition = "2018"
authors = ["Sam Ralph"]

[dev-dependencies]
strum = "0.23.0"
[dependencies]
load_census_data = { path = "../load_census_data" }
osm_data = { path = "../osm_data" }

anyhow = "1.0"
csv = "1.1.6"
dashmap = "5.1.0"
enum-map = "1.1.1"
geo = "0.18.0"
geo-types = "0.7.2"
lazy_static = "1.4.0"
log = "0.4"
num-format = { version = "0.4.0", features = ["with-system-locale"] }
rand = "0.8.4"
page_size = "0.4.2"
pretty_env_logger = "0.4"
procinfo = "0.4.2"
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0"
strum = "0.23"
strum_macros = "0.23"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

