[package]
name = "visualisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim = { path = "../sim" }

anyhow = "1.0"
enum-map = "1.1.1"
log = "0.4"
geo-types = "0.7.2"
petgraph = "0.6"
plotters = "0.3"
polylabel = "2.4.0"
ggez = "0.7"
