[package]
name = "visualisation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
live_render = []

[dependencies]
sim = { path = "../sim" }
load_census_data = { path = "../load_census_data" }
osm_data = { path = "../osm_data" }

anyhow = "1.0"
bimap = "0.6.1"
enum-map = "1.1.1"
log = "0.4"
geo-types = "0.7.2"
glam = "=0.20.1"
gilrs = { version = "=0.8.1", optional = true }
petgraph = "0.6"
plotters = "0.3"
polylabel = "2.4.0"
ggez = { version = "0.6.1", optional = true }
